--- a/src/main/resources/templates/anonymous/login.html
+++ b/src/main/resources/templates/anonymous/login.html
@@ -17,9 +17,8 @@
     <form method="post">
         <input type="text" id="login" class="fadeIn first" name="login" placeholder="Username" required="required">
         <input type="password" id="password" class="fadeIn second" name="login" placeholder="Password" required="required">
-        <div class="custom-checkbox">
-            <label> &nbsp;Remember me</label>
-            <input id="rememberme" name="rememberme" value="remember" type="checkbox" />
+        <div class=" row remember fadeIn third custom-checkbox">
+            <input id="rememberme" name="rememberme" value="remember" type="checkbox" />Remember me
         </div>
         <input type="submit" class="fadeIn fourth btn btn-primary btn-block btn-large" value="Submit">
     </form>
