--- a/src/main/resources/static/login.css
+++ b/src/main/resources/static/login.css
@@ -137,7 +137,24 @@ body {
     margin-bottom: 20px;
 }
 
+.remember {
+    color: #fff;
+    letter-spacing: 1px;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    opacity: 0.8;
+}
+
+.remember input {
+
+    width: 18px;
+    height: 18px;
+    margin-left: 15px;
+    margin-right: 5px;
+}
+
 input {
+    position: relative;
     width: 100%;
     margin-bottom: 10px;
     background: rgba(0, 0, 0, 0.3);
@@ -159,13 +176,6 @@ input {
 
 input:focus {
     box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4), 0 1px 1px rgba(255, 255, 255, 0.2);
-}
-
-label {
-    color: #fff;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    letter-spacing: 1px;
-    text-align: center;
 }
 
 
